--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
 /* landing page  */
-body{
+
+.landing-page{
     padding: 5rem 10rem;
     background-color: #e822f2;
+    background-image: linear-gradient(to bottom right, #e822f2, #3dd976);
     color: white;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .heading{
-    padding-top: 10rem;
-    font-weight: bold;
+    padding-top: 7rem;
+    font-size: 5rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
 }
 
 .seprect{
@@ -17,16 +22,14 @@ body{
 }
 
 .statistics{
-    position: absolute;
-    top: 35rem;
-    left: 20rem;
-    width: 50%;
+    position: relative;
+    top: 4rem;
+    left: 25rem;
+    width: 80%;
 }
 
-.results{
-    position:absolute;
-    height: 45%;
-    top: 24.5rem;
-    left: 43rem;
-    z-index: 1;
+/* Questions Page  */
+
+.question-page{
+    background-color: #eedbc7;
 }
