--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@
 
 .question-page{
     background-color: #eedbc7;
+    font-family: "Montserrat", sans-serif;
 }
 
 .button-exit{
@@ -71,4 +72,17 @@
 .question-heading{
     padding-bottom: 5rem;
     color: rgb(4, 4, 159);
+}
+
+.btn-continue{
+    position: relative;
+    top: 17rem;
+    left: 44rem;
+    background-color: rgb(84, 83, 83);
+    color: white;
+}
+
+.btn-continue:hover{
+    background-color: rgb(0, 81, 0);
+    color: white;
 }
